Switch to G1 GC.